namespace WolfIsland
{
    public enum Direction
    {
        Center,
        Top,
        RightTop,
        Right,
        RightBottom,
        Bottom,
        LeftBottom,
        Left,
        LeftTop
    }
}