namespace WolfIsland
{
    public interface IPlaceable
    {
        int X { get; set; }
        int Y { get; set; }
    }
}