namespace WolfIsland.Interfaces
{
    public interface IMovable
    {
        void MakeMove();
    }
}